--- a/index.html
+++ b/index.html
@@ -70,12 +70,18 @@
                 </div>-->
                 <article class="tm-section-1-r tm-bg-color-8">
                     <h2 class="tm-mb-2 tm-title-color">.01 General</h2>
-                    <p> The imminent rollout of the coronavirus vaccine is a public health issue that is on everyone’s minds right now. Although the science has been done to create the vaccine, what remains to be seen is how the vaccine will be distributed. 
-					Initially, the federal government will be the distributors of the vaccine, as they have already purchased hundreds of millions of doses in advance of the two most promising vaccine candidates from Pfizer and Moderna ([KFF]). 
-					Control will shift to states and local governments as the vaccine becomes more available, and the CDC has already been working with those organizations to develop unique plans that differ by each state’s needs. These distribution plans are 
-					based on a general Interim Playbook the CDC has developed to ensure that the vaccine is distributed quickly and efficiently. The two vaccines that have been developed use mRNA. These can be tricky to distribute because they cleave easily at 
-					room temperature and enzymes found in the environment can easily break them down ([Science Mag]). In addition, 5-20% of vaccines, based on previous data, tend to spoil in distribution, which will have to be factored into the distribution plans. 
-					Finally, every person who gets the vaccine will need two doses, and these doses must be from the same vaccine provider (Pfizer or Moderna). This means that the effective number of vaccines is cut in half.</p>
+                    <p> The imminent rollout of the coronavirus vaccine is an intervention for a public health issue
+					on a larger scale than ever seen before. Although the science has been done to create the vaccine, 
+					what remains to be seen is how it will be distributed. Initially, the federal government will be 
+					the distributors of the vaccine, as they have already purchased hundreds of millions of doses in 
+					advance of the two most promising vaccine candidates from Pfizer and Moderna. Control will shift 
+					to states and local governments as the vaccine becomes more available, and the CDC has already 
+					been working with those organizations to develop unique plans that differ by each state’s needs 
+					(Michaud et. al., 2020). The two vaccines that have been developed use mRNA. These can be tricky 
+					to distribute because they cleave easily at room temperature and enzymes found in the environment 
+					can easily break them down (Kaiser, 2020). Finally, every person who gets the vaccine will need two 
+					doses, and these doses must be from the same vaccine provider (Fischetti, 2020). This means that the 
+					effective number of vaccines is cut in half.</p>
                 </article>
             </div>
 			<img src="img/mRNAVaccine.png" alt="mRNA Vaccine" class="tm-img-responsive">
@@ -111,17 +117,16 @@
             <div class="tm-section-2-l">
                 <article class="tm-bg-color-6 tm-box-pad tm-mb-1">
                     <p>Transportation</p>
-                    <p class="tm-mb-0">Most likely the coronavirus vaccine will have to be transported through an 
-					ultracold chain, a chain where the vaccine is kept at very cold temperatures throughout its 
-					journey. The chain will have to be both over air and land, as both planes and trucks will be used 
-					to transport the virus throughout the U.S.. The Pfizer vaccine, which must be kept at -70 degrees Celsisus, 
-					will require special accommodations when being transported. One option for this would be the Arktek thermos, 
-					which was specially designed to transport ultracold vaccines for the Ebola intervention. Another option is to 
-					freeze dry the vaccine, turning into a powder and allowing it to be transported and reconstituted with water 
-					when it is ready to use. Pfizer will deliver shipments of 200 to 1000 vials in dry ice boxes from Kalamazoo, 
-					Michigan to the federal government. In each vial, about 5 doses of the vaccine can be made. The Moderna vaccine 
-					will be made in New Hampshire, Pennsylvania, and Indiana and delivered to Irving, Texas, the headquarters of 
-					Operation Warp Speed.</p>
+                    <p class="tm-mb-0">Most likely the coronavirus vaccine will have to be transported through an ultracold chain, 
+					a chain where the vaccine is kept at very cold temperatures throughout its journey. The chain will have to be 
+					both over air and land, as both planes and trucks will be used to transport the vaccine throughout the U.S. 
+					The Pfizer vaccine, which must be kept at -70 degrees Celsisus, will require special accommodations when being 
+					transported. One option for this would be the Arktek thermos, which was specially designed to transport ultracold 
+					vaccines for the Ebola intervention. Another option is to freeze dry the vaccine, turning into a powder and 
+					allowing it to be transported and reconstituted with water when it is ready to use. Pfizer will deliver shipments 
+					of 200 to 1000 vials in dry ice boxes from Kalamazoo, Michigan to the federal government (Kaiser, 2020). In each 
+					vial, about 5 doses of the vaccine can be made. The Moderna vaccine will be made in New Hampshire, Pennsylvania, 
+					and Indiana and delivered to Irving, Texas, the headquarters of Operation Warp Speed (Fischetti, 2020).</p>
                 </article>
 				<img src="img/thermos.png" alt="Arktek Thermos" class="tm-img-responsive">
                 <article class="tm-bg-color-7 tm-box-pad">
@@ -129,7 +134,7 @@
 					<p>The Pfizer vaccine can be stored in its thermal dry ice box for up to 2 weeks. 
 					From there, it can be stored for an additional 5 days in an ultracold freezer before 
 					it must be administered. The Moderna vaccine on the other hand, can be stored in a 
-					standard freezer for up to 6 months and for 30 days in a refrigerator.</p>
+					standard freezer for up to 6 months and for 30 days in a refrigerator (Fischetti, 2020).</p>
                     <!--<a href="#gallery" class="tm-btn tm-btn-2">Read More</a>-->
                 </article>
             </div>
@@ -152,20 +157,22 @@
                     <p class="tm-mb-0">Initially, there will be a very limited number of vaccine doses available. 
 					This means that states will have to prioritize certain populations before others. Those first 
 					to receive the vaccine will be health care workers, essential workers, and those at high risk 
-					for contracting COVID (older people and those with pre-disposing health risk factors). Vaccine 
-					trials for children have not been completed and children usually experience mild to no symptoms 
-					of COVID-19, so they will likely not be considered as a priority. Most states are also looking 
-					at considering certain minority groups as priority populations because of the disproportionate 
-					impact of COVID-19 on them. African Americans and Latinos especially are infected and killed by 
-					COVID-19 at a much higher rate than those from other racial and ethnic groups. By including these 
-					groups in their plans, states are effectively increasing the cultural competency of their interventions. 
-					While some states will explicitly make these minority groups a priority population as part of their plan, 
-					others such as Arizona (SVI) and California (HET/F), will use more indirect measures to target these populations, 
-					like a social vulnerability index and/or a Health Equity Team/Framework that will determine which populations 
-					are most in need of COVID-19. A Health Equity Team or Framework will be made up of or made by a group of 
-					experienced professionals in the field of public health who can tell states where to distribute the vaccine. 
-					The social vulnerability index takes into account variables from the U.S. Census Bureau to identify communities 
-					that may need help recovering from a disaster.</p>
+					for contracting COVID (older people and those with pre-disposing health risk factors) 
+					(Michaud et. al., 2020). Vaccine trials for children have not been completed and children 
+					usually experience mild to no symptoms of COVID-19, so they will likely not be considered 
+					as a priority (Maragakis, 2020). Most states are also looking at considering certain minority 
+					groups as priority populations because of the disproportionate impact of COVID-19 on them 
+					(Michaud et. al., 2020). African Americans and Latinos especially are infected and killed by 
+					COVID-19 at a much higher rate than those from other racial and ethnic groups. By including 
+					these groups in their plans, states are effectively increasing the cultural competency of their 
+					interventions. While some states will explicitly make these minority groups a priority population 
+					as part of their plan, others such as Arizona (SVI) and California (HET/F), will use more indirect 
+					measures to target these populations, like a social vulnerability index and/or a Health Equity 
+					Team/Framework that will determine which populations are most in need of COVID-19. A Health Equity 
+					Team or Framework will be made up of or made by a group of experienced professionals in the field of 
+					public health who can tell states where to distribute the vaccine. The social vulnerability index 
+					takes into account variables from the U.S. Census Bureau to identify communities that may need help 
+					recovering from a disaster (Michaud et. al., 2020)</p>
                 </article>
                 <div class="tm-gallery" id="tm-gallery">
                     <div class="tm-gallery-item nature">
@@ -277,19 +284,19 @@
 				<article class="tm-bg-color-6 tm-box-pad tm-mb-1 mt-1">
                     <p class="tm-mb-0">
 					<img src="img/johnshopkins.jpg" alt="Johns Hopkins" class="img-inside"/>
-					When discussing distribution of the vaccine, the CDC offers a playbook on 
-					what the phases of distribution will look like. During phase 1, there are limited amounts of 
-					vaccine so those initial doses will be given to specific groups, such as healthcare workers, 
-					essential workers, and high risk populations, and only a limited number of providers will 
-					administer the vaccine. In phase 2, the CDC expects the supply to increase and they plan to 
-					involve more providers in order to vaccinate a larger population. Finally during phase 3, 
-					vaccinations will become routine as supply meets demand. Furthermore, the providers of the 
-					covid vaccine will include “hospitals, doctors’ offices, pharmacies, health departments, 
-					federally qualified health centers, and other clinics”. Along with that, it will be the 
-					state's responsibility in determining and identifying certain providers and how many doses 
-					to send to each location in order to efficiently distribute vaccinations across the state. 
-					Finally, Pfizer plans to distribute in more urban areas while Moderna plans to distribute 
-					in rural regions.</p>
+					When discussing distribution of the vaccine, the CDC offers a playbook on what the phases of 
+					distribution will look like. During phase 1, there are limited amounts of vaccine so those 
+					initial doses will be given to specific groups as mentioned above: healthcare workers, essential 
+					workers, and high risk populations, and only a limited number of providers will administer the 
+					vaccine. In phase 2, the CDC expects the supply to increase and they plan to involve more 
+					providers in order to vaccinate a larger population. Finally during phase 3, vaccinations will 
+					become routine as supply meets demand. Furthermore, the providers of the covid vaccine will 
+					include “hospitals, doctors’ offices, pharmacies, health departments, federally qualified health
+					centers, and other clinics”. Along with that, it will be the state's responsibility in 
+					determining and identifying certain providers and how many doses to send to each location in 
+					order to efficiently distribute vaccinations across the state (Michaud et. al., 2020). Finally, 
+					Pfizer plans to distribute in more urban areas while Moderna plans to distribute in rural regions
+					(Fischetti, 2020).</p>
 					
                 </article>
             </div>
@@ -303,19 +310,22 @@
                 </div>
                 <article class="tm-section-1-r tm-bg-color-8">
                     <h2 class="tm-mb-2 tm-title-color">.05 Issues</h2>
-                    <p> Many issues are being brought up as we are learning more and more about the vaccines. One issue is 
-					how the vaccines will be stored. Well, for Moderna’s vaccine, Moderna states that their vaccine has to 
-					be stored at -20 degrees Celsius, but Pfizer’s vaccine needs to be stored at much colder temperatures, 
-					closer to -70 degrees Celsius. This can prove to be an issue since storage units for the vaccines will 
-					have to be manufactured and the vaccine will have to be transported to different locations at their 
-					respective temperatures. Another issue being talked about is how many units of the vaccine are going to 
-					be produced. Moderna states they will produce 20 million units in 2020 and 500 million to 1 billion units 
-					in 2021. Pfizer expects to produce 50 million doses in 2020 and 1.3 billion in 2021. Side effects are also 
-					being looked at with experts saying side effects will include pain at injection site, fatigue, soreness, 
-					headache, and fever. Unfortunately, the long term effects are not yet known. Americans are also wondering 
-					when the vaccine will be authorized, with the FDA expecting to authorize Pfizer’s vaccine by mid- December. 
+                    <p> Many issues are being brought up as we are learning more and more about the vaccines. One 
+					issue is how the vaccines will be stored. Well, for Moderna’s vaccine, Moderna states that 
+					their vaccine has to be stored at -20 degrees Celsius, but Pfizer’s vaccine needs to be stored 
+					at much colder temperatures, closer to -70 degrees Celsius. This can prove to be an issue since 
+					storage units for the vaccines will have to be manufactured and the vaccine will have to be 
+					transported to different locations at their respective temperatures (Kaiser, 2020). Another issue
+					being talked about is how many units of the vaccine are going to be produced. Moderna states they
+					will produce 20 million units in 2020 and 500 million to 1 billion units in 2021. Pfizer expects 
+					to produce 50 million doses in 2020 and 1.3 billion in 2021 (Fischetti, 2020). Side effects are 
+					also being looked at with experts saying side effects will include pain at injection site, fatigue, 
+					soreness, headache, and fever. Unfortunately, the long term effects are not yet known. Americans 
+					are also wondering when the vaccine will be authorized, with the FDA expecting to authorize Pfizer’s
+					vaccine by mid- December (Rodriguez, 2020). In addition, 5-20% of vaccines, based on previous data, 
+					tend to spoil in distribution, which will have to be factored into the distribution plans (Fischetti, 2020). 
 					Along with these issues, communication is key in providing the public with accurate information, reassuring 
-					the public, and addressing any questions the public has about the vaccine.
+					the public, and addressing any questions the public has about the vaccine. 
 					</p>
                 </article>
             </div>
